Fixes flickering when mouse moves between nodes labels
w/ a secret rect!

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -338,6 +338,10 @@ h2 {
     cursor: pointer;
     transition: opacity .5s @base-ease;
 
+    .hover-box {
+      fill-opacity: 0;
+    }
+
     &.hovered text {
       stroke: @background-average-color;
       stroke-width: 8px;
